fix(global): :bug: Fixing header z-index

--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -3,6 +3,7 @@
   top: 0;
   right: 0;
   left: 0;
+  z-index: 1000;
   padding: 1rem 7%;
   display: flex;
   align-items: center;
